<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_set_the_base_price"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/PrimaryRedColor"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EtBasePriceFloat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:theme="@style/TextInputLayoutStyle"
        >

        <EditText
            android:id="@+id/EtBasePrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/base_price"
            android:inputType="number"
            android:autofillHints="Base Price" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.royrodriguez.transitionbutton.TransitionButton
        android:id="@+id/BtnSubmitAuction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/white"
        app:defaultColor="@color/PrimaryRedColor"
        app:loaderColor="@android:color/white" />

</LinearLayout>