<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EtLandmarkTypeFloatLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:theme="@style/TextInputLayoutStyle"
        >

        <EditText
            android:id="@+id/EtLandmarkType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/type"
            android:inputType="text"
            android:autofillHints="Must write the car plate number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EtLandmarkLocationFloatLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:theme="@style/TextInputLayoutStyle"
        >

        <EditText
            android:id="@+id/EtLandmarkLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="text"
            android:autofillHints="Must write the car plate code" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EtLandmarkNameFloatLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:theme="@style/TextInputLayoutStyle"
        >

        <EditText
            android:id="@+id/EtLandmarkName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:autofillHints="Must write the car plate code" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EtAreaFloatLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:theme="@style/TextInputLayoutStyle"
        >

        <EditText
            android:id="@+id/EtLandmarkArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/area"
            android:inputType="number"
            android:autofillHints="Must write the car plate code" />

    </com.google.android.material.textfield.TextInputLayout>



</LinearLayout>