<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoublePasswordActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password Reset"
        android:textColor="@color/PrimaryRedColor"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please type your new password"
        android:textColor="@color/PrimaryRedColor"
        android:textSize="24sp"
        android:layout_marginTop="16sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EtResetPasswordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/TextInputLayoutStyle"
        android:layout_margin="16sp"
        >

        <EditText
            android:id="@+id/EtResetPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EtResetPasswordAgainLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/TextInputLayoutStyle"
        android:layout_margin="16sp"
        >

        <EditText
            android:id="@+id/EtResetPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/password_again"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.royrodriguez.transitionbutton.TransitionButton
        android:id="@+id/ConfirmPasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@android:color/white"
        app:defaultColor="@color/PrimaryRedColor"
        app:loaderColor="@android:color/white"
        android:layout_margin="16sp"
        />


</LinearLayout>