<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_usub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        android:textSize="32sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_text1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="16sp"
                android:layout_marginTop="8sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_text2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="16sp"
                android:layout_marginTop="8sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/our_sponsor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="16sp"
                android:layout_marginTop="8sp"
                android:textColor="@color/PrimaryPeachyColor"
                android:textStyle="bold"
                android:paddingBottom="16sp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logoemiratesauction"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/application_developer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="16sp"
                android:layout_marginTop="0sp"
                android:textColor="@color/PrimaryPeachyColor"
                android:textStyle="bold"
                android:paddingBottom="16sp"
                />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/TableContent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16sp"
                    android:paddingEnd="16sp"
                    android:stretchColumns="1">

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/developer_name"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textStyle="bold"
                            android:textAlignment="viewEnd"
                            />

                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Maitha Khamies Almesmari"
                            android:textStyle="normal"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="H00378029"
                            android:textAlignment="viewEnd"
                            />

                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Alia Salem Aldhaheri"
                            android:textStyle="normal"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="H00367817"
                            android:textAlignment="viewEnd"
                            />

                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Amnah Ali Semaihi"
                            android:textStyle="normal"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="H00326081"
                            android:textAlignment="viewEnd"
                            />

                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Shouq Mohamed Alawadhi"
                            android:textStyle="normal"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="H00367890"
                            android:textAlignment="viewEnd"
                            />

                    </TableRow>
                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Aishah Abdalla Alqaydi"
                            android:textStyle="normal"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="H00367989"
                            android:textAlignment="viewEnd"
                            />

                    </TableRow>
                </TableLayout>

            </TableLayout>
        </LinearLayout>


    </ScrollView>



</LinearLayout>